--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,27 @@
 Package: gSoup
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Analysis of population genetics and molecular evolution
+Version: 0.9.900
+Date: 2024-04-30
+Authors@R: c(person(given="Piyal",family="Karunarathne", email="piyalkarumail@yahoo.com", role = c("aut", "cre"),comment = c(ORCID = "0000-0002-1934-145X")))
+Maintainer: Piyal Karunarathne <piyalkarumail@yahoo.com>
+Description: I wrote this package to all bioinformatic tools in one place because I was tired of having to switch between different platforms to perform basic (and advance) population genetics and molecular evolution analyses.
+License: AGPL (>= 3)
+Imports: Rcpp
+LinkingTo: Rcpp
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
+Depends: 
+    R (>= 3.6.0)
+Suggests: 
+    rmarkdown,
+    knitr,
+    testthat (>= 3.0.0),
+    covr
+##VignetteBuilder: knitr
+Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
+URL: https://piyalkarum.github.io/gSoup/
+BugReports: https://github.com/piyalkarum/gSoup/issues
+Packaged: 2024-09-13 16:35:40 UTC; piyalkarunarathne
