--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,4 @@ importFrom(utils,combn)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
+useDynLib(gSoup, .registration = TRUE)
