--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export(GeneAnno)
 export(TajimaD)
+export(calculate_piAS)
+export(calculate_pi_theta)
 export(calculate_sfs)
 export(div.stats)
 export(fast_split_sw)
 export(gb2sense)
 export(pairwise_length)
-export(piAS)
-export(pi_theta)
 export(plot_piAS)
 export(plot_pi_theta)
 export(rm_gaps)
