--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Maintainer: Piyal Karunarathne <piyalkarumail@yahoo.com>
 Description: I wrote this package to assemble all essential bioinformatic tools in one place because I was tired of having to switch between different platforms to perform basic (and advance) population genetics and molecular evolution analyses.
 License: AGPL (>= 3)
 biocViews: Software
-Imports: Rcpp, Biostrings, ape, seqinr, methods, stringr, stats, utils
-LinkingTo: Rcpp
+Imports: Rcpp, Biostrings, ape, seqinr, methods, stringr, stats, utils, progress
+LinkingTo: Rcpp, progress
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
