--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Piyal Karunarathne <piyalkarumail@yahoo.com>
 Description: I wrote this package to assemble all essential bioinformatic tools in one place because I was tired of having to switch between different platforms to perform basic (and advance) population genetics and molecular evolution analyses.
 License: AGPL (>= 3)
 biocViews: Software
-Imports: Rcpp, Biostrings, ape, seqinr, methods, stringr, stats, utils, progress
+Imports: Rcpp, Biostrings, ape, seqinr, methods, stringr, stats, utils, progress, terra
 LinkingTo: Rcpp, progress
 Encoding: UTF-8
 LazyData: true
