--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(calculate_pi_theta)
 export(calculate_sfs)
 export(div.stats)
 export(fast_split_sw)
+export(find_blast_clusters)
 export(gb2sense)
+export(overlap_percentage)
 export(pairwise_length)
 export(plot_piAS)
 export(plot_pi_theta)
